bk_ida/gccida/c1/dwarf2out_frame_debug_expr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1794:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( __int64)expr[1]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1804:1: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
cfa_temp_0 = rtx->fld[0].rtuint; 
^~~~~~~~~~
cfa_temp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1804:12: error: assigning to 'dw_cfa_location' (aka 'struct cfa_loc') from incompatible type 'unsigned int'
cfa_temp_0 = rtx->fld[0].rtuint; 
           ^ ~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1838:1: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
cfa_temp_0 = cfa.reg; 
^~~~~~~~~~
cfa_temp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1838:12: error: assigning to 'dw_cfa_location' (aka 'struct cfa_loc') from incompatible type 'unsigned long'
cfa_temp_0 = cfa.reg; 
           ^ ~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1846:30: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
if ( *( _WORD *)v26 != 61 || cfa_temp_0 != *( _DWORD *)( v26 + 8) || **( _WORD **)( v9 + 16) != 54 ) 
                             ^~~~~~~~~~
                             cfa_temp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1846:41: error: invalid operands to binary expression ('dw_cfa_location' (aka 'struct cfa_loc') and 'uint32' (aka 'unsigned int'))
if ( *( _WORD *)v26 != 61 || cfa_temp_0 != *( _DWORD *)( v26 + 8) || **( _WORD **)( v9 + 16) != 54 ) 
                             ~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1849:6: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
if ( cfa_temp_0 != rtuint ) 
     ^~~~~~~~~~
     cfa_temp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1849:17: error: invalid operands to binary expression ('dw_cfa_location' (aka 'struct cfa_loc') and 'long long')
if ( cfa_temp_0 != rtuint ) 
     ~~~~~~~~~~ ^  ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1850:1: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
cfa_temp_0 = rtuint; 
^~~~~~~~~~
cfa_temp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1850:12: error: assigning to 'dw_cfa_location' (aka 'struct cfa_loc') from incompatible type 'long long'
cfa_temp_0 = rtuint; 
           ^ ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1867:6: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
if ( cfa_temp_0 != v34 ) 
     ^~~~~~~~~~
     cfa_temp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1867:17: error: invalid operands to binary expression ('dw_cfa_location' (aka 'struct cfa_loc') and 'long long')
if ( cfa_temp_0 != v34 ) 
     ~~~~~~~~~~ ^  ~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1928:1: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
cfa_temp_0 = cfa.reg; 
^~~~~~~~~~
cfa_temp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1928:12: error: assigning to 'dw_cfa_location' (aka 'struct cfa_loc') from incompatible type 'unsigned long'
cfa_temp_0 = cfa.reg; 
           ^ ~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1933:6: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
if ( cfa_temp_0 == *( _DWORD *)( v19 + 8) && *( rtx *)( v9 + 16) == global_rtl[2] ) 
     ^~~~~~~~~~
     cfa_temp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1933:17: error: invalid operands to binary expression ('dw_cfa_location' (aka 'struct cfa_loc') and 'uint32' (aka 'unsigned int'))
if ( cfa_temp_0 == *( _DWORD *)( v19 + 8) && *( rtx *)( v9 + 16) == global_rtl[2] ) 
     ~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1933:54: error: expected expression
if ( cfa_temp_0 == *( _DWORD *)( v19 + 8) && *( rtx *)( v9 + 16) == global_rtl[2] ) 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1945:1: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
cfa_temp_0 = rtx->fld[0].rtuint; 
^~~~~~~~~~
cfa_temp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_frame_debug_expr/src/obj/dwarf2out.o] Error 1
